<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpCenter">

    <Button
        android:id="@+id/HelpBackHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_frame"
        android:text="@string/Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/HelpAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpQuestion2"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/HelpAnswer1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpQuestion1"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/HelpQuestion2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpAnswer1"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/HelpQuestion3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpAnswer2"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/HelpAnswer3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Answer3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HelpQuestion3"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/HelpQuestion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Question1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

</androidx.constraintlayout.widget.ConstraintLayout>