<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EA_startElection">

    <TextView
        android:id="@+id/RegistrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/SetElectionRegistration"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/ElectionBackHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_frame"
        android:text="@string/Back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/RegistrationPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/RegistrationPeriod"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/RegisterStart"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/grey_frame"
        android:drawableStart="@drawable/ic_calendar"
        android:paddingLeft="15dp"
        android:text="@string/DayMonthYear"
        android:textColor="@color/black" />
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:text="@string/To"
        android:textSize="28sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="155dp"
        />

    <Button
        android:id="@+id/RegisterEnd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/grey_frame"
        android:drawableStart="@drawable/ic_calendar"
        android:paddingStart="15dp"
        android:text="@string/DayMonthYear"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/VotersList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/VoterList"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="italic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/VotersRecView"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:padding="10dp"
        />

<!--    <Button-->
<!--        android:id="@+id/upload"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/VotersRecView"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:background="@drawable/orange_frame"-->
<!--        android:text="@string/Upload"-->
<!--        android:textAllCaps="false" />-->


    <Button
        android:id="@+id/deleteVoterBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VotersRecView"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/orange_frame"
        android:text="@string/delete_Voters"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/addVoterBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/VotersRecView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/orange_frame"
        android:text="@string/add_Voters"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addVoterBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@color/dark_orange"
        android:text="@string/Submit"
        android:textAllCaps="false"

        />

</RelativeLayout>