<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewElection">

    <Button
        android:id="@+id/ViewElectionBackHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_frame"
        android:text="@string/Back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/viewRegistrationSituation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_orange"
        android:text="@string/ViewRegistrationSituation"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/viewVoterSituation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_orange"
        android:text="@string/ViewVoterSituation"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewRegistrationSituation"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/viewResult"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/dark_orange"
        android:text="@string/ViewResult"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewVoterSituation"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/ResultRelease_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:text="@string/result_day"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewResult"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/ResultRelease_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:autofillHints="@string/day_20210410"
        android:hint="@string/day_20210412"
        android:inputType="date"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ResultRelease_show"
        app:layout_constraintVertical_bias="0.715" />
</androidx.constraintlayout.widget.ConstraintLayout>