<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addVoter">
    <Button
        android:id="@+id/ElectionBackHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_frame"
        android:text="@string/Back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/voterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:drawableStart="@drawable/ic_baseline_person_add_alt_1_24"
        android:text="@string/Voter"
        android:textSize="32sp" />
    <EditText
        android:id="@+id/add_voter_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/orange_frame"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="20dp"
        android:hint="@string/Name"
        android:padding="10dp"
        />

<!--    <EditText-->
<!--        android:id="@+id/add_voter_email"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="50dp"-->
<!--        android:layout_marginTop="210dp"-->
<!--        android:background="@drawable/orange_frame"-->
<!--        android:drawableStart="@drawable/ic_baseline_email_24"-->
<!--        android:drawablePadding="20dp"-->
<!--        android:hint="@string/Email" -->
<!--        />-->
    <EditText
        android:id="@+id/add_voter_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="210dp"
        android:background="@drawable/orange_frame"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:padding="10dp"
        android:drawablePadding="20dp"
        android:hint="@string/Email"
        />
    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:id="@+id/submitAddVoterButton"
        android:text="@string/add_Voters"
        android:background="@color/dark_orange"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_voter_email"
        android:layout_marginTop="50dp"
        />

</RelativeLayout>